# Cocoon

./: .gitignore  Cargo.toml  README.md
crates/cocoon-bundle/: Cargo.toml
crates/cocoon-bundle/src/: lib.rs
crates/cocoon-cli/: Cargo.toml
crates/cocoon-cli/src/: main.rs
crates/cocoon-cli/tests/: cli_golden.rs
crates/cocoon-core/: Cargo.toml
crates/cocoon-core/src/: capability.rs  diff.rs  domain.rs  error.rs  hash.rs  lib.rs  manifest.rs
crates/cocoon-policy/: Cargo.toml
crates/cocoon-policy/src/: lib.rs
crates/cocoon-runtime/: Cargo.toml
crates/cocoon-runtime/src/: authority.rs  fsutil.rs  install.rs  lib.rs  plan.rs  receipt.rs  run.rs  status.rs
crates/cocoon-testkit/: Cargo.toml
crates/cocoon-testkit/src/: fixture.rs  lib.rs
crates/redox-link-probe/: Cargo.toml
crates/redox-link-probe/src/: main.rs
docs/: ARCHITECTURE.md  CAPSULE_FORMAT.md  CLI_CONTRACT.md  CODING_STYLE.md  LINUX_REDOXER_DEPLOYMENT_TEST.md  MACOS_DEV.md  PRODUCTION_READINESS_TRACKER.md  REDOX_TESTING.md  ROADMAP.md  SECURITY_MODEL.md
docs/reports/: p1.2d-fd-only-controlled-launch.md  p1.2e-installed-capsule-fd-launch.md  p1.2f-run-backend-graduation.md  p1.2g-multi-profile-fd-run.md  p1.2h-structured-child-result.md  p1.2i-review-hardening.md  p2a-pkgar-boundary.md  redox-community-review-package.md  redox-runtime-scheme-minimums.md  redox-upstream-review-ask.md
examples/hello-service/: Cargo.toml  Cocoon.toml
examples/hello-service/src/: main.rs
examples/permission-diff-v1/: Cocoon.toml
examples/permission-diff-v2/: Cocoon.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: archive_path.rs  bundle_from_bytes.rs
redox/cookbook/cocoon/: README.md
redox/scripts/: build-image.sh  qemu.sh
scripts/: audit_ai_smell.sh
xtask/: Cargo.toml
xtask/src/: main.rs
