[workspace]
members = [
  "crates/cocoon-core",
  "crates/cocoon-bundle",
  "crates/cocoon-policy",
  "crates/cocoon-cli",
  "crates/cocoon-runtime",
  "crates/cocoon-testkit",
  "crates/redox-link-probe",
  "xtask",
]

# Fuzzing crate is intentionally excluded from the default workspace build because
# it requires a nightly toolchain and `cargo-fuzz` instrumentation.
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Arthur Tsang"]
license = "MIT"
repository = "https://github.com/a19q3/Cocoon.git"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
blake3 = "1"
semver = "1"
tar = "0.4"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
