[package]
name = "cocoon-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cocoon-bundle = { path = "../crates/cocoon-bundle" }

[[bin]]
name = "bundle_from_bytes"
path = "fuzz_targets/bundle_from_bytes.rs"

[[bin]]
name = "archive_path"
path = "fuzz_targets/archive_path.rs"
