[package]
name = "cocoon-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cocoon-bundle = { path = "../cocoon-bundle" }
cocoon-core = { path = "../cocoon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
