[package]
name = "cocoon-testkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cocoon-core = { path = "../cocoon-core" }
cocoon-bundle = { path = "../cocoon-bundle" }
thiserror = { workspace = true }
tempfile = { workspace = true }
